[[bin]]
name = "elevator"
path = "src/elevator/main.rs"

[lib]
path = "src/cache/lib.rs"

[package]
name = "ood"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
